# LPC54016-SDK

./: CMakeLists.txt
LinkerScript/: LPC54016_flash.ld
device/: LPC54016.h  LPC54016_features.h  fsl_device_registers.h  startup_LPC54016.S  system_LPC54016.c  system_LPC54016.h
drivers/: board.h  fsl_clock.c  fsl_clock.h  fsl_reset.c  fsl_reset.h  fsl_usart.c  peripherals.c
